2025-07-15T01:41:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16281944198 # 705
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-15
* notice: last 14d: unq all: 9 18
* notice: prev accum: outdated-unq outdated-all / unq all: 1027 1507 / 1045 1525
* notice: next accum: outdated-unq outdated-all / unq all: 1027 1507 / 1046 1526
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-07-01 2025-07-14]

2025-07-14T01:40:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16255960474 # 704
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-14
* notice: last 14d: unq all: 10 18
* notice: prev accum: outdated-unq outdated-all / unq all: 1026 1506 / 1043 1523
* notice: next accum: outdated-unq outdated-all / unq all: 1027 1507 / 1045 1525
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-06-30] / [2025-07-13]

2025-07-13T01:44:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16244084480 # 703
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-13
* notice: last 14d: unq all: 9 17
* notice: prev accum: outdated-unq outdated-all / unq all: 1025 1505 / 1040 1520
* notice: next accum: outdated-unq outdated-all / unq all: 1026 1506 / 1043 1523
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2025-06-29] / [2025-07-12]

2025-07-12T01:37:46Z: