@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-15T01:41:15Z",
-  "count_outdated" : 1507,
-  "uniques_outdated" : 1027,
-  "count" : 1526,
-  "uniques" : 1046,
+  "timestamp" : "2025-07-16T01:37:49Z",
+  "count_outdated" : 1509,
+  "uniques_outdated" : 1029,
+  "count" : 1527,
+  "uniques" : 1047,
   "clones" : [
-    {
-      "timestamp": "2025-07-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2025-07-03T00:00:00Z",
       "count": 2,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-07-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
