@@ -1,12 +1,7 @@
 {
   "count": 18,
-  "uniques": 9,
+  "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2025-07-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-07-03T00:00:00Z",
       "count": 2,
@@ -59,6 +54,11 @@
     },
     {
       "timestamp": "2025-07-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
