@@ -1,3 +1,12 @@
+2025-07-16T01:37:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16308240319 # 706
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-16
+* notice: last 14d: unq all: 8 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 1027 1507 / 1046 1526
+* notice: next accum: outdated-unq outdated-all / unq all: 1029 1509 / 1047 1527
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-07-01] / [2025-07-15]
+
 2025-07-15T01:41:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16281944198 # 705
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-15
